# controle-colaboradores-api

./: .env  .gitignore  LICENSE.md  Procfile  README.md  TODO.md  manage.py  pyproject.toml  requirements-inclusive-dev.txt  requirements.txt
controle-colaboradores-api/: urls.py
controle-colaboradores-api/apps/appexemplo/: admin.py  urls.py  views.py
controle-colaboradores-api/apps/municipios/: admin.py  apps.py
controle-colaboradores-api/apps/municipios/dados/: cadastrar_dados.py  mesorregioes.csv  regioesdesaude.csv
controle-colaboradores-api/apps/perfis/: apps.py  models.py
controle-colaboradores-api/apps/perfis/migrations/: 0002_initial.py
controle-colaboradores-api/apps/usuarios/: admin.py  apps.py  forms.py  models.py
controle-colaboradores-api/apps/usuarios/migrations/: 0001_initial.py
controle-colaboradores-api/settings/: base.py  production.py
controle_colaboradores_api/: asgi.py  exemplo_requirements_fusion_pipcompile.txt  urls.py  wsgi.py
controle_colaboradores_api/apps/api_cursos/: apps.py
controle_colaboradores_api/apps/appexemplo/: forms.py
controle_colaboradores_api/apps/localidades_brasileiras/: apps.py  models.py  serializers.py  urls.py  views.py  views_access_policies.py
controle_colaboradores_api/apps/localidades_brasileiras/dados/: estados.csv  municipios.csv
controle_colaboradores_api/apps/localidades_brasileiras/migrations/: 0001_initial.py  0002_alter_unidadefederativa_capital.py  0003_alter_municipio_nome.py
controle_colaboradores_api/apps/localidades_brasileiras/tests/: test_models.py  test_serializers.py  (+1 more)
controle_colaboradores_api/apps/municipios/: apps.py  models.py
controle_colaboradores_api/apps/perfis/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py  views_access_policies.py
controle_colaboradores_api/apps/usuarios/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py  views_access_policies.py
controle_colaboradores_api/settings/: base.py  local.py  production.py  production_heroku.py
requirements/: base.txt  local.txt  production.txt
(+30 files in other folders)
